--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@ body {
   background-color: var(--black);
   color: white;
   font-family: "Public Sans", sans-serif;
-  /* overflow: hidden; */
-  overflow: auto;
+  overflow: hidden;
+  /* overflow: auto; */
 }
 
 .theme-container {
